--- a/src/app/components/headers/job-actions-header/job-actions-header.component.scss
+++ b/src/app/components/headers/job-actions-header/job-actions-header.component.scss
@@ -7,7 +7,8 @@
   align-items: center;
   justify-content: center;
   display: flex;
-  background-color: $color-cerise-500 !important;
+  background: $color-cerise-500 url("/assets/images/job-banner.jpg") no-repeat right top !important;
+  background-size: cover !important;
   color: white;
   min-height: 300px;
 
