--- a/src/app/components/my-jobs-item/my-jobs-item.component.html
+++ b/src/app/components/my-jobs-item/my-jobs-item.component.html
@@ -1,4 +1,4 @@
-<div class="my-jobs-item clickable" (click)="onListItemClick()">
+<div class="my-jobs-item" (click)="onListItemClick()">
   <div>
     {{application.job.jobDate | date: "MMM"}}<br/>
     <span>{{application.job.jobDate | date: "dd"}}</span>
