--- a/src/app/components/buttons/base-button/base-button.component.scss
+++ b/src/app/components/buttons/base-button/base-button.component.scss
@@ -14,6 +14,10 @@
   text-decoration: none;
   text-transform: uppercase;
   @include truncate-owerflowing-text;
+
+  &:disabled {
+    opacity: 0.5;
+  }
 }
 // FLUID
 .btn.fluid {
