--- a/src/app/styles/dimensions.scss
+++ b/src/app/styles/dimensions.scss
@@ -1,5 +1,7 @@
 $header-height: 54px;
 
+$basic-border-header-height: 74px;
+
 $xs-device-width: 543px;
 $xs-device-width-upper: #{$xs-device-width + 1px};
 $sm-device-width: 767px;
