--- a/src/app/components/forms/user-update-form/user-update-form.component.html
+++ b/src/app/components/forms/user-update-form/user-update-form.component.html
@@ -204,7 +204,7 @@
     *ngIf="missingUserTraits?.interest_ids"
     class="ui horizontal divider pink header">
     <i class="heart icon"></i>
-    {{'user.update.form.general.skills.section.header' | translate}}
+    {{'user.update.form.interests.section.header' | translate}}
   </h3>
 
   <interests-input
