Protect godmode route with logged in admin guard

--- a/src/app/components/forms/user-missing-traits-next-form/user-missing-traits-next-form.component.html
+++ b/src/app/components/forms/user-missing-traits-next-form/user-missing-traits-next-form.component.html
@@ -1,5 +1,5 @@
 <form
-  [@slideInLeftOutLeft]="animationState"
+  [@slideInLeftOutLeftAnimation]="animationState"
   (ngSubmit)="submitForm()"
   #form="ngForm"
   class="ui form">
